--- a/estacionamento_1/templates/index.html
+++ b/estacionamento_1/templates/index.html
@@ -5,10 +5,10 @@
 <title>IJFN | Trabalho Desenv. Web II</title>
 <link rel="stylesheet" type="text/css" href="/static/css/css.css"/>
 </head>
-<body style="background:url(/static/img/bg.png)">
-    <div id="header">		
-        <h1 >Sistema de Controle para Estacionamento em Python e Django V. 0.1</h1>            			
-		<ul align="center">						
+<body style="background:url(/static/img/bg.jpg);background-size:100%">
+	<div id="header" style="background:url(/static/img/a.png)no-repeat;background-size:100% 100%">		       	       
+    <h1>Sistema de Controle para Estacionamento em Python e Django V. 0.1</h1>            			
+	<ul align="center">						
 			<li><a href="Clientes" title="Ir ao setor de clientes" >Clientes</a> </li>	|
 			<li><a href="Carros" title="Ir ao setor de carros" >Carros</a> </li>				
 		</ul>			
@@ -16,27 +16,24 @@
     <div id="painel" >	
 		<div align="center" >        	
 			<h3 class="msg">Disposição atual das vagas</h3>
-				<div id="estacionamento" >       								
-				{% for x in lista %}								
-					{% if x.0 == True %}						
-						<a href="fVaga/" title="Ocupar esta vaga">
-						<div class="vaga" ><div class="nome"> {{forloop.counter0}}</div><p class="vazia"> </p></div> 
-						</a>
-					{% else %}						
-						<a href="eVaga/{{x.1}}" title="Desocupar esta vaga">
-						<div class="vaga"><div class="nome" > {{forloop.counter0}}</div><p class="ocupada"> </p></div>      
-						</a>
-					{% endif %}
-				{% endfor %}
-				</div>												
+			<div id="estacionamento" >       								
+			{% for x in lista %}								
+				{% if x.0 == True %}						
+				<a href="fVaga/" title="Ocupar esta vaga">
+					<div class="vaga" ><div class="nome"> {{forloop.counter0}}</div><p class="vazia"> </p></div> 
+				</a>
+				{% else %}						
+				<a href="eVaga/{{x.1}}" title="Desocupar esta vaga">
+					<div class="vaga"><div class="nome" > {{forloop.counter0}}</div><p class="ocupada"> </p></div>      
+				</a>
+				{% endif %}
+			{% endfor %}
+			</div>												
 		</div>				
-<h3 style="float:left;width:100%"class="msg"></h3>	
-	<br><br>
-		
+		<h3 style="float:left;width:100%"class="msg"></h3>	
+		<div id="footer" align="center">		
+			<h4><a style="text-decoration:none;color:white;" href="/admin">IJFN | 2015</a></h4>        		     		
+		</div>	
      </div>		
-	 
-	<div id="footer" align="center">		
-		<h4><a style="text-decoration:none;color:white;" href="/admin">IJFN | 2015</a></h4>        		     		
-	</div>
 </body>
 </html>
