--- a/estacionamento_1/templates/form.html
+++ b/estacionamento_1/templates/form.html
@@ -4,10 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>IJFN | Trabalho Desenv. Web II</title>
 <link rel="stylesheet" type="text/css" href="/static/css/css.css"/>
+<script type="text/javascript" src="/static/js/relogio.js"></script>
 </head>
-<body style="background:url(/static/img/bg.jpg);background-size:100%">
-    <div id="header" style="background:url(/static/img/a.png)no-repeat;background-size:100% 100%">		
-		<h1 align="center;" >Sistema de Controle para Estacionamento em Python e Django V. 1.0</h1>
+<body onload="moveR()" style="max-width:150%">
+	<input id="relogio" readonly type="text" name="relogio" size="10" title="Hora atual" style="margin:0 auto;border:none">
+    <div id="header" title="IJFN | Trabalho Desenv. Web II"><br>		
+		<h1 align="center;" >Controle de Estacionamento v.2.1</h1>
 		<ul align="center">				
 		<li><a href="/" title="Ir a tela inicial">Home</a> </li>	
 			{% if contexto != None %}
