--- a/estacionamento_1/templates/list.html
+++ b/estacionamento_1/templates/list.html
@@ -5,9 +5,9 @@
 <title>IJFN | Trabalho Desenv. Web II</title>
 <link rel="stylesheet" type="text/css" href="/static/css/css.css"/>
 </head>
-<body style="background:url(/static/img/bg.jpg);background-size:100%">
-    <div id="header" style="background:url(/static/img/a.png)no-repeat;background-size:100% 100%">				
-		<h1 align="center">Sistema de Controle para Estacionamento em Python e Django V. 0.1</h1>
+<body style="">
+    <div id="header" title="IJFN | Trabalho Desenv. Web II"><br>			
+		<h1 align="center">Controle de Estacionamento v.2.1</h1>
     	<ul align="center">				
 			<li><a href="/" title="Ir a tela inicial">Home</a> </li>	|
 			<li><a href="/f{{contexto}}">Cadastrar</a> </li>											
