--- a/estacionamento_1/templates/form.html
+++ b/estacionamento_1/templates/form.html
@@ -7,9 +7,9 @@
 <script type="text/javascript" src="/static/js/relogio.js"></script>
 </head>
 <body onload="moveR()" style="max-width:150%">
-	<input id="relogio" readonly type="text" name="relogio" size="10" title="Hora atual" style="margin:0 auto;border:none">
+	<!--<input id="relogio" readonly type="text" name="relogio" size="10" title="Hora atual" style="margin:0 auto;border:none">-->
     <div id="header" title="IJFN | Trabalho Desenv. Web II"><br>		
-		<h1 align="center;" >Controle de Estacionamento v.2.1</h1>
+		<h1 align="center;" >Controle de Estacionamento v.2.2</h1>
 		<ul align="center">				
 		<li><a href="/" title="Ir a tela inicial">Home</a> </li>	
 			{% if contexto != None %}
@@ -24,7 +24,7 @@
 			{% if contexto == None %}
 			<h3 class="msg">Edição de dados </h3>
 			{% else %}
-			<h3 class="msg">Cadastro de {{contexto}}s</h3>
+			<h3 class="msg" style="margin-bottom:11px">Cadastro de {{contexto}}s</h3>
 			{% endif %}
 			{{vaga}}
 			<form method="post">
