--- a/estacionamento_1/templates/list.html
+++ b/estacionamento_1/templates/list.html
@@ -7,22 +7,35 @@
 </head>
 <body style="">
     <div id="header" title="IJFN | Trabalho Desenv. Web II"><br>			
-		<h1 align="center">Controle de Estacionamento v.2.1</h1>
+		<h1 align="center">Controle de Estacionamento v.2.2</h1>
     	<ul align="center">				
 			<li><a href="/" title="Ir a tela inicial">Home</a> </li>	|
 			<li><a href="/f{{contexto}}">Cadastrar</a> </li>											
 		</ul>	
-    </div>      
-    <div id="painel">		       
-		<div align="center">
-			<h3 class="msg">Listagem de {{contexto}}s</h3>			
-			{% for post in post %}		
-			<a href="/e{{contexto}}/{{post.id}}" title="Editar este {{contexto}}">
-				<div class="lista">
+    </div> 
+    <div id="painel">		
+	<h3 class="msg" style="margin-bottom:-9px">Pesquisar por {{contexto}}s</h3>
+		<div style="" align="center">		         
+			<form style="margin-top:10px;">								
+				<input type="text" autocomplete="off" placeholder="Pesquise por nome de {{contexto}}" name="query" style="width:85%;margin-right:200px" />				
+				<input type="submit" value="pesquisar" style="width:100px;margin-top:-28px;float:right"/>			
+				
+			<form/>					
+		</div>
+	
+		<div align="center">																					
+		{% if post %}
+				<h3 style="margin-bottom:2px"class="msg"> Resultado(s) Encontrado(s) </h3>
+			{% for post in post %}					
+			<a href="/e{{contexto}}/{{post.id}}" title="Editar este {{contexto}}">			
+				<div style="padding:10px;font-size:22px;" class="lista">
 					{{ post}} 
 				</div>
-			</a>		
-			{% endfor %}
+			</a>					
+			{% endfor %}								
+			{% else %}
+				<h3 class="msg">Nenhum resultado encontrado !</h3>
+			{% endif %}
 			<h4><a class="link" href="/"><img src="/static/img/voltar.png" width="20" height="20" title="voltar"></a></h4>
 		</div>	
 		<h3 class="msg"></h3>			
