--- a/estacionamento_1/templates/index.html
+++ b/estacionamento_1/templates/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html  xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>IJFN | Trabalho Desenv. Web II</title>
 <link rel="stylesheet" type="text/css" href="/static/css/css.css"/>
+<link rel="stylesheet" type="text/css" href="/static/css/animate.css">
 <script type="text/javascript" src="/static/js/relogio.js"></script>
 </head>
-<body onload="moveR()">
-	<input id="relogio" readonly type="text" name="relogio" size="10" title="Hora atual" style="margin:0 auto;border:none">
+<body onload="moveR()" class="animated fadeInDownBig">
+	<p id="a"></p>
 	
+	<form name="relogio" class="relogio" style="margin-top:-15px;">
+		<input  readonly type="text" name="relogio" size="10" title="Hora atual" class="inputRelogio">	
+	</form>
 	<div id="header" title="IJFN | Trabalho Desenv. Web II"><br>	
-    <h1>Controle de Estacionamento v.2.2</h1>            			
+    <h1 >Controle de Estacionamento v.2.2</h1>            			
 	<ul align="center">						
 			<li><a href="Clientes" title="Ir ao setor de clientes" >Clientes</a> </li>	|
 			<li><a href="Carros" title="Ir ao setor de carros" >Carros</a> </li>				
@@ -35,7 +39,7 @@
 		</div>				
 		<h3 class="msg" style="float:left;width:100%"></h3>	
 		<div id="footer" align="center">		
-			<h4><a href="/admin">IJFN | 2015</a></h4>        		     		
+			<h4><a href="/admin">Todos direitos reservados &copy<br> IJFN | 2015</a></h4>        		     		
 		</div>	
      </div>		
 </body>
