--- a/estacionamento_1/templates/list.html
+++ b/estacionamento_1/templates/list.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html class="animated fadeIn" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>IJFN | Trabalho Desenv. Web II</title>
+<link rel="stylesheet" type="text/css" href="/static/css/animate.css">
 <link rel="stylesheet" type="text/css" href="/static/css/css.css"/>
+
+<script type="text/javascript" src="/static/js/relogio.js"></script>
 </head>
-<body style="">
-    <div id="header" title="IJFN | Trabalho Desenv. Web II"><br>			
+<body onload="moveR()">
+	
+	<form name="relogio" class="relogio">
+		<input  readonly type="text" name="relogio" size="10" title="Hora atual" class="inputRelogio">	
+	</form>	
+	<div id="header" title="IJFN | Trabalho Desenv. Web II"><br>			
 		<h1 align="center">Controle de Estacionamento v.2.2</h1>
     	<ul align="center">				
 			<li><a href="/" title="Ir a tela inicial">Home</a> </li>	|
@@ -14,9 +21,9 @@
 		</ul>	
     </div> 
     <div id="painel">		
-	<h3 class="msg" style="margin-bottom:-9px">Pesquisar por {{contexto}}s</h3>
+	<h3 class="msg" style="margin-bottom:-9px;">Pesquisar por {{contexto}}s</h3>
 		<div style="" align="center">		         
-			<form style="margin-top:10px;">								
+			<form style="margin-top:5px;height:30px">								
 				<input type="text" autocomplete="off" placeholder="Pesquise por nome de {{contexto}}" name="query" style="width:85%;margin-right:200px" />				
 				<input type="submit" value="pesquisar" style="width:100px;margin-top:-28px;float:right"/>			
 				
@@ -40,7 +47,7 @@
 		</div>	
 		<h3 class="msg"></h3>			
 	    <div id="footer" align="center">		
-			<h4><a class="link" href="/admin">IJFN | 2015</a></h4>        		      		
+			<h4><a href="/admin">Todos direitos reservados &copy<br> IJFN | 2015</a></h4>        		      		
 		</div>
     </div>
 </body>
